tests/cases/success/variadic_printf.c
int printf(char *, ...);

int main() {
  return printf("x=%d %c\n", 1, 'a');
}
