tests/cases/fail/non_variadic_extra_args.c
int puts(char *);

int main() {
  return puts("x", 1);
}
